# gwas-beyond-snps

./: .gitignore  .rumdl.toml  AGENTS.md  CHANGELOG.md  README.md  noxfile.py  pyproject.toml
.github/: ci.yaml  copilot-instructions.md
.github/workflows/: ci.yaml  publish-dev-docs.yaml  publish-docs.yaml  publish-pypi.yaml
deployment/: Dockerfile  nginx.conf
deployment/helm/: Chart.yaml  values-dev.yaml  values.yaml
deployment/helm/templates/: deployment.yaml  gwas-beyond-snps-deployment.yaml  ingress.yaml  service.yaml
docs/: .gitignore  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs/decisions/: 0001-adopt-pydantic.md  0001-pydantic-sumstats.md  0002-gene-model.md  0003-cnv-model.md  0004-define-pydantic.md  0004-sumstat-class-design.md  0005-wasm-wizard.md  0005-web-wizard.md  README.md
docs/docs/: how-to-reuse-cnv.mdx  how-to-reuse-gene.mdx  how-to-reuse.md  how-to-submit.md  intro.md
docs/docs/data-requirements/: cnv.mdx  genes.mdx  other.md
docs/docs/data_requirements/: cnv.md  cnv.mdx  genes.md  genes.mdx
docs/docs/decisions/: 0002-gene-model.md  0003-cnv-model.md  0006-implement-checklist.md  0007-sort-output.md
docs/src/components/: ColumnRequirements.tsx
docs/static/validate/: build.py  index.html  wizard.js
src/gwascatalog/sumstatapp/: constants.py  main.py  navbuttons.py  wizard.py  wizard.tcss  wizardstate.py
src/gwascatalog/sumstatapp/cli/: __main__.py  _validate.py
src/gwascatalog/sumstatapp/screens/: __init__.py  base_wizard_screen.py  effect_size.py  file_picker.py  genetic_variation.py  gwas_software.py  highly_significant.py  p_value.py  welcome.py
src/gwascatalog/sumstatapp/web/: .gitignore  README.md  build.py  column-defs.json  index.html  pyscript.toml  validate.py  validation-worker.js  wizard.js
src/gwascatalog/sumstatapp/web/static/examples/: invalid-cnv.csv  invalid-gene.csv  valid-cnv.csv  valid-gene.csv
sumstatlib/: README.md  pyproject.toml
sumstatlib/src/gwascatalog/sumstatlib/: __init__.py  _pydantic.py  constants.py  sumstattable.py  type_helpers.py
sumstatlib/src/gwascatalog/sumstatlib/cnv/: __init__.py  models.py  sumstat_enums.py  sumstat_types.py
sumstatlib/src/gwascatalog/sumstatlib/core/: __init__.py  helpers.py  metadata_enums.py  metadata_types.py  models.py  sumstat_enums.py  sumstat_types.py  sumstattable.py  type_helpers.py
sumstatlib/src/gwascatalog/sumstatlib/gene/: __init__.py  models.py  sumstat_types.py
sumstatlib/src/gwascatalog/sumstatlib/snp/: __init__.py  models.py  sumstat_enums.py  sumstat_types.py
sumstatlib/tests/: conftest.py  helpers.py  test_basemodel.py  test_basetypes.py  test_cnvmodel.py  test_cnvtypes.py  test_genemodel.py  test_genetypes.py  test_sumstattable.py
sumstatlib/tests/integration/: test_big_sumstat.py  test_cnv.py
sumstatlib/tests/integration/data/: cnv.txt  cnv_alias.txt
tests/integration/: test_cli_cnv.py  test_cli_gene.py
