[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gwascatalog.sumstatapp"
version = "0.1.0"
description = "Data validation applications for GWAS Catalog submissions"
authors = [
    { name = "Benjamin Wingfield", email = "bwingfield@ebi.ac.uk" },
]
license = "Apache-2.0"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gwascatalog.sumstatlib",
    "textual>=7.3.0",
    "textual-dev>=1.8.0",
]

[project.scripts]
gwascatalog-submit-sumstat = "gwascatalog.sumstatapp.wizard:main"

[tool.uv.workspace]
members = [
    "sumstatlib",
]

[tool.uv.sources]
gwascatalog-sumstatlib = { workspace = true }

[tool.ruff.lint]
extend-select = [
    "F",        # Pyflakes rules
    "W",        # PyCodeStyle warnings
    "E",        # PyCodeStyle errors
    "I",        # Sort imports properly
    "UP",       # Warn if certain things can changed due to newer Python versions
    "C4",       # Catch incorrect use of comprehensions, dict, list, etc
    "FA",       # Enforce from __future__ import annotations
    "ISC",      # Good use of string concatenation
    "ICN",      # Use common import conventions
    "RET",      # Good return practices
    "SIM",      # Common simplification rules
    "TID",      # Some good import practices
    "TC",       # Enforce importing certain types in a TYPE_CHECKING block
    "PTH",      # Use pathlib instead of os.path
    "TD",       # Be diligent with TODO comments
    "NPY",      # Some numpy-specific things
]


[tool.hatch.build.targets.wheel]
packages = ["src/gwascatalog"]

[tool.pytest.ini_options]
filterwarnings = [
    "error",
]
