[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gwascatalog.sumstatlib"
version = "0.1.0"
description = "Data validation library for GWAS Catalog summary statistics"
authors = [
    { name = "Benjamin Wingfield", email = "bwingfield@ebi.ac.uk" },
]
license = "Apache-2.0"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
]

[project.urls]
Homepage = 'https://ebi.ac.uk/gwas'

[tool.hatch.build.targets.wheel]
packages = ["src/gwascatalog"]
artifacts = [
  "py.typed"
]

[tool.pytest.ini_options]
filterwarnings = [
    "error",
]