[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gwascatalog.sumstatlib"
version = "0.1.0"
description = "Data validation library for GWAS Catalog summary statistics"
authors = [
    { name = "Benjamin Wingfield", email = "bwingfield@ebi.ac.uk" },
]
license = "Apache-2.0"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
requires-python = ">=3.13"

[project.optional-dependencies]
pydantic = [
    "pydantic>=2.12.5",
]

[project.urls]
Homepage = 'https://ebi.ac.uk/gwas'

[dependency-groups]
dev = [
  "pytest",
  "pydantic"
]

[tool.hatch.build.targets.wheel]
packages = ["src/gwascatalog"]
artifacts = [
  "py.typed"
]

[tool.pytest.ini_options]
filterwarnings = [
    "error",
]

[tool.ruff.lint]
extend-select = [
    "F",        # Pyflakes rules
    "W",        # PyCodeStyle warnings
    "E",        # PyCodeStyle errors
    "I",        # Sort imports properly
    "UP",       # Warn if certain things can changed due to newer Python versions
    "C4",       # Catch incorrect use of comprehensions, dict, list, etc
    "FA",       # Enforce from __future__ import annotations
    "ISC",      # Good use of string concatenation
    "ICN",      # Use common import conventions
    "RET",      # Good return practices
    "SIM",      # Common simplification rules
    "TID",      # Some good import practices
    "TC",       # Enforce importing certain types in a TYPE_CHECKING block
    "PTH",      # Use pathlib instead of os.path
    "TD",       # Be diligent with TODO comments
    "NPY",      # Some numpy-specific things
]

[tool.ruff.lint.per-file-ignores]
# pydantic models trigger type checking false positives
"src/gwascatalog/sumstatlib/cnv/models.py" = ["TC001"]
"src/gwascatalog/sumstatlib/core/models.py" = ["TC001"]
"src/gwascatalog/sumstatlib/gene/models.py" = ["TC001"]
"src/gwascatalog/sumstatlib/snp/models.py" = ["TC001"]
